# digpipe

./: .gitignore  AGENTS.md  LICENSE  README.md  digpipe.code-workspace  pyproject.toml
.github/workflows/: cd.yml  ci.yml  codeql.yml
digpipe/: cli.py  digtape.py  pipeline.py
digpipe/sources/: pi_chudnovsky.py
docs/: CLASS_DIAGRAM.md
tests/: test_coverage_gaps.py  test_digtape.py  test_mapper.py  test_pi_source.py  test_pipeline.py
